--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.12",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@types/feather-icons": "^4.7.0",
+    "@types/jest": "24.0.11",
     "@types/node": "10.12.18",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "typescript": "3.2.2"
+    "@types/react": "16.8.3",
+    "@types/react-dom": "16.8.3",
+    "feather-icons": "^4.21.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-feather": "^1.1.6",
+    "react-scripts": "2.1.8",
+    "typescript": "3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
